Removed no player nearby notification for license

--- a/server/fivem-resource/ui/license-card.html
+++ b/server/fivem-resource/ui/license-card.html
@@ -1,5 +1,7 @@
 <div id="idCardOverlay" class="id-card-overlay hidden" aria-hidden="true">
   <section class="id-card" role="dialog" aria-modal="false" aria-labelledby="idCardTitle">
+    <img class="id-card-watermark" src="vicroads-logo.png" alt="" aria-hidden="true" />
+
     <header class="id-card-header">
       <div class="id-card-banner">
         <div class="id-card-banner-line1">DRIVER LICENCE</div>
@@ -50,7 +52,6 @@
 
       <div class="id-card-photo-panel">
         <img id="idCardPhoto" class="id-card-photo" alt="Licence photo" data-license-image="mugshot_url" />
-        <img class="id-card-vicroads-logo" src="vicroads-logo.png" alt="VicRoads" />
       </div>
     </div>
 
