Fixed death detection

--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -203,8 +203,8 @@
           <div id="miniCadClosestMeta" class="minicad-closest-meta"></div>
           <div id="miniCadClosestLocation" class="minicad-closest-location"></div>
           <div class="minicad-closest-actions">
-            <button id="miniCadClosestAttach" class="minicad-nav-btn minicad-closest-attach" type="button">Attach</button>
-            <button id="miniCadClosestDecline" class="minicad-nav-btn minicad-closest-decline" type="button">Decline</button>
+            <button id="miniCadClosestAttach" class="minicad-nav-btn minicad-closest-attach" type="button">Attach (Y)</button>
+            <button id="miniCadClosestDecline" class="minicad-nav-btn minicad-closest-decline" type="button">Decline (N)</button>
           </div>
         </section>
 
