Updated mini cad

--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -189,7 +189,7 @@
         <span id="miniCadCallIndex" class="minicad-index">1/1</span>
         <span class="minicad-brand">Mini-CAD</span>
         <div class="minicad-header-btns">
-          <button id="miniCadHideBtn" class="minicad-icon-btn" type="button" title="Hide (PageUp)">x</button>
+          <button id="miniCadHideBtn" class="minicad-icon-btn" type="button" title="Hide (Insert)">x</button>
         </div>
       </header>
 
@@ -229,6 +229,11 @@
         </div>
       </div>
     </div>
+
+    <button id="miniCadTab" class="minicad-tab hidden" type="button" aria-label="Show Mini-CAD">
+      <span class="minicad-tab-dot"></span>
+      <span id="miniCadTabLabel" class="minicad-tab-label">Mini-CAD (Insert)</span>
+    </button>
 
     <div id="mugshotBackdrop" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:#fff;z-index:0;"></div>
 
